# huffman

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake_init_x64.cmd  init.sh
sources/: cmd_args.cpp  cmd_args.h  huffman.cpp  huffman.h  main.cpp
